--- a/src/QBConnect/QBConnect.csproj
+++ b/src/QBConnect/QBConnect.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasicImporter.cs" />
+    <Compile Include="Models\InvoiceLineItemModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
