--- a/src/MCBusinessLogic/MCBusinessLogic.csproj
+++ b/src/MCBusinessLogic/MCBusinessLogic.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Controllers\FileSystemHandler.cs" />
     <Compile Include="Controllers\FileSystemHelper.cs" />
     <Compile Include="Controllers\QbImportController.cs" />
+    <Compile Include="Models\QbInvoiceModel.cs" />
     <Compile Include="Models\QbStaffModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
