--- a/src/WPFDesktopUI/packages.config
+++ b/src/WPFDesktopUI/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Caliburn.Micro" version="3.2.0" targetFramework="net472" />
   <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.Core" version="1.0.112.2" targetFramework="net472" />
 </packages>
