--- a/src/WPFDesktopUI/App.config
+++ b/src/WPFDesktopUI/App.config
@@ -1,9 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="WPFDesktopUI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <connectionStrings>
     <add name="Default" connectionString="Data Source=.\Database\QbDb.db;Version=3" providerName="System.Data.SqlClient"/>
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <WPFDesktopUI.Properties.Settings>
+            <setting name="StnCsvSeparation" serializeAs="String">
+                <value>,</value>
+            </setting>
+        </WPFDesktopUI.Properties.Settings>
+    </userSettings>
 </configuration>
