added additional params for quickbooks preferences

--- a/src/WPFDesktopUI/App.config
+++ b/src/WPFDesktopUI/App.config
@@ -16,6 +16,12 @@
             <setting name="StnCsvSeparation" serializeAs="String">
                 <value>,</value>
             </setting>
+            <setting name="StnQbInvTemplateName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="StnQbInvHasTemplate" serializeAs="String">
+                <value>False</value>
+            </setting>
         </WPFDesktopUI.Properties.Settings>
     </userSettings>
 </configuration>
