--- a/src/WPFDesktopUI/Properties/Settings.settings
+++ b/src/WPFDesktopUI/Properties/Settings.settings
@@ -5,5 +5,11 @@
     <Setting Name="StnCsvSeparation" Type="System.String" Scope="User">
       <Value Profile="(Default)">,</Value>
     </Setting>
+    <Setting Name="StnQbInvTemplateName" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="StnQbInvHasTemplate" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
