added dymanic file selection on screen resize in preferences

--- a/src/WPFDesktopUI/App.config
+++ b/src/WPFDesktopUI/App.config
@@ -22,6 +22,9 @@
             <setting name="StnQbInvHasTemplate" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="StnQbFilePath" serializeAs="String">
+                <value />
+            </setting>
         </WPFDesktopUI.Properties.Settings>
     </userSettings>
 </configuration>
