added new visualization to set dates and the like by the user

--- a/src/WPFDesktopUI/App.config
+++ b/src/WPFDesktopUI/App.config
@@ -25,6 +25,12 @@
             <setting name="StnQbFilePath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="StnQbInvHasHeaderOther" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="StnQbInvHeaderOtherName" serializeAs="String">
+                <value>Other</value>
+            </setting>
         </WPFDesktopUI.Properties.Settings>
     </userSettings>
 </configuration>
