--- a/src/WPFDesktopUI/WPFDesktopUI.csproj
+++ b/src/WPFDesktopUI/WPFDesktopUI.csproj
@@ -74,17 +74,14 @@
     </ApplicationDefinition>
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Models\PersonModel.cs" />
-    <Compile Include="ViewModels\CustomerViewModel.cs" />
     <Compile Include="ViewModels\ImportViewModel.cs" />
     <Compile Include="ViewModels\PreferencesViewModel.cs" />
     <Compile Include="ViewModels\Preferences\PreferencesCsvImportViewModel.cs" />
     <Compile Include="ViewModels\Preferences\PreferencesGeneralViewModel.cs" />
     <Compile Include="ViewModels\Preferences\PreferencesQuickBooksViewModel.cs" />
     <Compile Include="ViewModels\QuickBooksViewModel.cs" />
+    <Compile Include="ViewModels\QuickBooks\QuickBooksSidePaneViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
-    <Compile Include="Views\CustomerView.xaml.cs">
-      <DependentUpon>CustomerView.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Views\DumpView.xaml.cs">
       <DependentUpon>DumpView.xaml</DependentUpon>
     </Compile>
@@ -106,6 +103,9 @@
     <Compile Include="Views\QuickBooksView.xaml.cs">
       <DependentUpon>QuickBooksView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\QuickBooks\QuickBooksSidePaneView.xaml.cs">
+      <DependentUpon>QuickBooksSidePaneView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ShellView.xaml.cs">
       <DependentUpon>ShellView.xaml</DependentUpon>
     </Compile>
@@ -118,10 +118,6 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\css\Style.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\CustomerView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -150,6 +146,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\QuickBooksView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\QuickBooks\QuickBooksSidePaneView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
