--- a/src/MCBusinessLogic/MCBusinessLogic.csproj
+++ b/src/MCBusinessLogic/MCBusinessLogic.csproj
@@ -55,13 +55,16 @@
     <Compile Include="Controllers\CsvParser.cs" />
     <Compile Include="Controllers\FileSystemHandler.cs" />
     <Compile Include="Controllers\FileSystemHelper.cs" />
-    <Compile Include="Controllers\IFileSystemHandler.cs" />
+    <Compile Include="Controllers\Interfaces\IFileSystemHandler.cs" />
+    <Compile Include="Controllers\Interfaces\IQbImportController.cs" />
+    <Compile Include="Controllers\NxQbImportController.cs" />
     <Compile Include="Controllers\QbImportController.cs" />
     <Compile Include="Controllers\QbImportExceptionHandler.cs" />
     <Compile Include="DataAccess\SqliteDataAccess.cs" />
     <Compile Include="Models\CsvModel.cs" />
     <Compile Include="Models\CustomerModel.cs" />
-    <Compile Include="Models\QbInvoiceModel.cs" />
+    <Compile Include="Models\DefaultInvoiceHeaderModel.cs" />
+    <Compile Include="Models\NxInvoiceHeaderModel.cs" />
     <Compile Include="Models\QbStaffModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
