decoupled GetTemplateNamesList from Basic Importer - new class and interface for general imports - new model for QB responses based on a responseList from DoRequest()

--- a/src/QBConnect/QBConnect.csproj
+++ b/src/QBConnect/QBConnect.csproj
@@ -43,7 +43,11 @@
   <ItemGroup>
     <Compile Include="BasicImporter.cs" />
     <Compile Include="Classes\Interfaces\IInvoiceLineAppender.cs" />
+    <Compile Include="Classes\Interfaces\IQuery.cs" />
     <Compile Include="Classes\LineItem.cs" />
+    <Compile Include="Classes\Query.cs" />
+    <Compile Include="Classes\Response.cs" />
+    <Compile Include="Classes\TemplateQuery.cs" />
     <Compile Include="Models\InvoiceHeaderModel.cs" />
     <Compile Include="Models\InvoiceLineItemModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
