moved response to models folder in QbConnect

--- a/src/QBConnect/QBConnect.csproj
+++ b/src/QBConnect/QBConnect.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Classes\Interfaces\IQuery.cs" />
     <Compile Include="Classes\LineItem.cs" />
     <Compile Include="Classes\Query.cs" />
-    <Compile Include="Classes\Response.cs" />
+    <Compile Include="Models\Response.cs" />
     <Compile Include="Classes\TemplateQuery.cs" />
     <Compile Include="Models\InvoiceHeaderModel.cs" />
     <Compile Include="Models\InvoiceLineItemModel.cs" />
