added CustomerQuery class in QB .dll

--- a/src/QBConnect/QBConnect.csproj
+++ b/src/QBConnect/QBConnect.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasicImporter.cs" />
+    <Compile Include="Classes\CustomerQuery.cs" />
     <Compile Include="Classes\Interfaces\IInvoiceLineAppender.cs" />
     <Compile Include="Classes\Interfaces\IQuery.cs" />
     <Compile Include="Classes\ItemQuery.cs" />
