--- a/src/WPFDesktopUI/App.config
+++ b/src/WPFDesktopUI/App.config
@@ -6,7 +6,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="Default" connectionString="Data Source=.\Database\QbDb.db;Version=3" providerName="System.Data.SqlClient"/>
+    <add name="Default" connectionString="Data Source=|DataDirectory|\Database\QbDb.db;Version=3" providerName="System.Data.SqlClient"/>
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
