--- a/src/QBConnect/QBConnect.csproj
+++ b/src/QBConnect/QBConnect.csproj
@@ -88,12 +88,12 @@
     <Compile Include="Classes\Interfaces\IClientSessionManager.cs" />
     <Compile Include="InvoiceImporter.cs" />
     <Compile Include="Classes\Interfaces\IInvoiceLineAppender.cs" />
-    <Compile Include="Classes\Interfaces\IQuery.cs" />
-    <Compile Include="Classes\ItemQuery.cs" />
+    <Compile Include="Classes\Query\Interfaces\IQuery.cs" />
+    <Compile Include="Classes\Query\ItemQuery.cs" />
     <Compile Include="Classes\LineItem.cs" />
-    <Compile Include="Classes\Query.cs" />
+    <Compile Include="Classes\Query\Abstract\Query.cs" />
     <Compile Include="Models\Response.cs" />
-    <Compile Include="Classes\TemplateQuery.cs" />
+    <Compile Include="Classes\Query\TemplateQuery.cs" />
     <Compile Include="Models\InvoiceHeaderModel.cs" />
     <Compile Include="Models\InvoiceLineItemModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
