--- a/src/MCBusinessLogic/MCBusinessLogic.csproj
+++ b/src/MCBusinessLogic/MCBusinessLogic.csproj
@@ -96,10 +96,12 @@
     <Compile Include="Controllers\FileSystemHandler.cs" />
     <Compile Include="Controllers\FileSystemHelper.cs" />
     <Compile Include="Controllers\Interfaces\IFileSystemHandler.cs" />
+    <Compile Include="Controllers\Interfaces\IQbExportController.cs" />
     <Compile Include="Controllers\Interfaces\IQbImportController.cs" />
     <Compile Include="Controllers\NxQbImportController.cs" />
     <Compile Include="Controllers\QbImportController.cs" />
     <Compile Include="Controllers\QbImportExceptionHandler.cs" />
+    <Compile Include="Controllers\QbExportController.cs" />
     <Compile Include="DataAccess\SqliteDataAccess.cs" />
     <Compile Include="Models\CsvModel.cs" />
     <Compile Include="Models\DefaultInvoiceHeaderModel.cs" />
