--- a/src/WPFDesktopUI/WPFDesktopUI.csproj
+++ b/src/WPFDesktopUI/WPFDesktopUI.csproj
@@ -130,6 +130,7 @@
     <Compile Include="ViewModels\Preferences\PreferencesGeneralViewModel.cs" />
     <Compile Include="ViewModels\Preferences\PreferencesQuickBooksViewModel.cs" />
     <Compile Include="ViewModels\QuickBooksViewModel.cs" />
+    <Compile Include="ViewModels\QuickBooks\AbstractQuickBooksSidePane.cs" />
     <Compile Include="ViewModels\QuickBooks\QuickBooksSidePaneViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="Views\AboutView.xaml.cs">
