--- a/src/WPFDesktopUI/WPFDesktopUI.csproj
+++ b/src/WPFDesktopUI/WPFDesktopUI.csproj
@@ -126,10 +126,14 @@
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Controllers\SettingsController.cs" />
     <Compile Include="Models\PersonModel.cs" />
+    <Compile Include="Models\SidePaneModels\Attributes\Interfaces\IQbComboBox.cs" />
     <Compile Include="Models\SidePaneModels\Attributes\QbAttribute.cs" />
     <Compile Include="Models\SidePaneModels\Attributes\Interfaces\IQbAttribute.cs" />
+    <Compile Include="Models\SidePaneModels\Attributes\QbComboBox.cs" />
+    <Compile Include="Models\SidePaneModels\Attributes\Interfaces\IQuickBooksSidePaneModel.cs" />
     <Compile Include="Models\SidePaneModels\QuickBooksSidePaneModel.cs" />
     <Compile Include="ViewModels\AboutViewModel.cs" />
+    <Compile Include="ViewModels\Factory.cs" />
     <Compile Include="ViewModels\ImportViewModel.cs" />
     <Compile Include="ViewModels\Interfaces\IMainTab.cs" />
     <Compile Include="ViewModels\PreferencesViewModel.cs" />
