--- a/src/WPFDesktopUI/WPFDesktopUI.csproj
+++ b/src/WPFDesktopUI/WPFDesktopUI.csproj
@@ -126,8 +126,14 @@
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Controllers\SettingsController.cs" />
     <Compile Include="Models\PersonModel.cs" />
+    <Compile Include="Models\SidePaneModels\Attributes\Interfaces\Payloads\IDateTimePayload.cs" />
     <Compile Include="Models\SidePaneModels\Attributes\Interfaces\IQbComboBox.cs" />
-    <Compile Include="Models\SidePaneModels\Attributes\QbAttribute.cs" />
+    <Compile Include="Models\SidePaneModels\Attributes\Interfaces\IQbDateTimeAttribute.cs" />
+    <Compile Include="Models\SidePaneModels\Attributes\Interfaces\IQbStringAttribute.cs" />
+    <Compile Include="Models\SidePaneModels\Attributes\Interfaces\Payloads\IStringPayload.cs" />
+    <Compile Include="Models\SidePaneModels\Attributes\QbAbstractAttribute.cs" />
+    <Compile Include="Models\SidePaneModels\Attributes\QbDateTimeAttribute.cs" />
+    <Compile Include="Models\SidePaneModels\Attributes\QbStringAttribute.cs" />
     <Compile Include="Models\SidePaneModels\Attributes\Interfaces\IQbAttribute.cs" />
     <Compile Include="Models\SidePaneModels\Attributes\QbComboBox.cs" />
     <Compile Include="Models\SidePaneModels\Attributes\Interfaces\IQuickBooksSidePaneModel.cs" />
