moved BtnQbImport from QBVM into it's own model class - abstracted classes and used interfaces, inverted dependencies - NxQbImportController now uses interfaces in some situations - still need to abstract NxQbImportController() in QBModel

--- a/src/MCBusinessLogic/MCBusinessLogic.csproj
+++ b/src/MCBusinessLogic/MCBusinessLogic.csproj
@@ -106,6 +106,8 @@
     <Compile Include="Models\CsvModel.cs" />
     <Compile Include="Models\ClientInvoiceHeaderModel.cs" />
     <Compile Include="Models\ClientInvoiceLineItemModel.cs" />
+    <Compile Include="Models\Interfaces\IClientInvoiceLineItemModel.cs" />
+    <Compile Include="Models\Interfaces\IClientInvoiceHeaderModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
