--- a/src/WPFDesktopUI/WPFDesktopUI.csproj
+++ b/src/WPFDesktopUI/WPFDesktopUI.csproj
@@ -125,6 +125,8 @@
     </ApplicationDefinition>
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Controllers\SettingsController.cs" />
+    <Compile Include="Models\Interfaces\IQuickBooksModel.cs" />
+    <Compile Include="Models\QuickBooksModel.cs" />
     <Compile Include="Models\SidePaneModels\Attributes\Interfaces\Payloads\IDateTimePayload.cs" />
     <Compile Include="Models\SidePaneModels\Attributes\Interfaces\IQbComboBox.cs" />
     <Compile Include="Models\SidePaneModels\Attributes\Interfaces\IQbDateTimeAttribute.cs" />
