--- a/src/WPFDesktopUI/WPFDesktopUI.csproj
+++ b/src/WPFDesktopUI/WPFDesktopUI.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Models\SidePaneModels\Attributes\Interfaces\Payloads\IStringPayload.cs" />
     <Compile Include="Models\SidePaneModels\Attributes\QbAbstractAttribute.cs" />
     <Compile Include="Models\SidePaneModels\Attributes\QbDateTimeAttribute.cs" />
+    <Compile Include="Models\SidePaneModels\Attributes\QbDoubleAttribute.cs" />
     <Compile Include="Models\SidePaneModels\Attributes\QbNullAttribute.cs" />
     <Compile Include="Models\SidePaneModels\Attributes\QbStringAttribute.cs" />
     <Compile Include="Models\SidePaneModels\Attributes\Interfaces\IQbAttribute.cs" />
