added rollback (void invoices) procedure

--- a/src/QBConnect/QBConnect.csproj
+++ b/src/QBConnect/QBConnect.csproj
@@ -84,9 +84,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\ClientSessionManager.cs" />
+    <Compile Include="Classes\Factory.cs" />
     <Compile Include="Classes\HeaderItem.cs" />
     <Compile Include="Classes\Interfaces\IClientSessionManager.cs" />
     <Compile Include="Classes\Query\InvoiceQuery.cs" />
+    <Compile Include="Classes\Rollback\Interfaces\IRollback.cs" />
+    <Compile Include="Classes\Rollback\QbVoid.cs" />
     <Compile Include="IInvoiceImporter.cs" />
     <Compile Include="InvoiceImporter.cs" />
     <Compile Include="Classes\Interfaces\IInvoiceLineAppender.cs" />
