--- a/src/WPFDesktopUI.UnitTests/WPFDesktopUI.UnitTests.csproj
+++ b/src/WPFDesktopUI.UnitTests/WPFDesktopUI.UnitTests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Models\SidePaneModels\Attributes\QbStringAttributeTests.cs" />
     <Compile Include="Models\SidePaneModels\Attributes\QbDoubleAttributeTests.cs" />
     <Compile Include="Models\SidePaneModels\Attributes\QbNullAttributeTests.cs" />
+    <Compile Include="Models\SidePaneModels\QuickBooksSidePaneModelTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
