--- a/src/WPFDesktopUI.UnitTests/WPFDesktopUI.UnitTests.csproj
+++ b/src/WPFDesktopUI.UnitTests/WPFDesktopUI.UnitTests.csproj
@@ -68,6 +68,9 @@
       <Name>WPFDesktopUI</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
