--- a/src/QBConnect/QBConnect.csproj
+++ b/src/QBConnect/QBConnect.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Classes\HeaderItem.cs" />
     <Compile Include="Classes\Interfaces\IClientSessionManager.cs" />
     <Compile Include="Classes\Query\InvoiceQuery.cs" />
+    <Compile Include="Classes\Query\TermsQuery.cs" />
     <Compile Include="Classes\Rollback\AbstractRollback.cs" />
     <Compile Include="Classes\Rollback\Interfaces\IRollback.cs" />
     <Compile Include="Classes\Rollback\QbDelete.cs" />
