decoupled groupby logic and moved into it's own class

--- a/src/MCBusinessLogic/MCBusinessLogic.csproj
+++ b/src/MCBusinessLogic/MCBusinessLogic.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Models\Interfaces\ICsvModel.cs" />
     <Compile Include="Models\Interfaces\IClientInvoiceLineItemModel.cs" />
     <Compile Include="Models\Interfaces\IClientInvoiceHeaderModel.cs" />
+    <Compile Include="Models\Interfaces\IInvoice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
